<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tong_an_learn_transparent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tong_an_corner_white_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/tong_an_learn_camera_dialog_tips"
            android:textColor="@color/tong_an_black_212121"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:text="@string/tong_an_learn_camera_pop_window_tips_str"
            android:textColor="@color/tong_an_black_212121"
            android:textSize="13sp" />


        <ImageView
            android:id="@+id/tong_an_origin_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/tong_an_learn_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:background="@color/tong_an_learn_camera_pop_window_tips_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="13dp"
                android:text="@string/tong_an_learn_camera_pop_window_rule_title"
                android:textColor="@color/tong_an_black_212121"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/tong_an_learn_camera_pop_window_rule_tips"
                android:textColor="@color/tong_an_black_212121"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tong_an_pop_later_learn_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/tong_an_shape_blue"
            android:gravity="center"
            android:text="@string/tong_an_learn_camera_pop_window_change_btn_str"
            android:textColor="@color/tong_an_learn_white"
            android:textSize="17sp" />


        <TextView
            android:id="@+id/tong_an_try_again_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:paddingBottom="20dp"
            android:text="@string/tong_an_learn_camera_pop_window_try_btn_str"
            android:textColor="@color/tong_an_gay_616161"
            android:textSize="13sp" />

    </LinearLayout>


</LinearLayout>